crates/routa-watch/src/snapshots/routa_watch__tui__tests__routa_watch_tui_compact.snap
---
source: crates/routa-watch/src/tui_tests.rs
expression: "render_snapshot(&state, &mut cache, 96, 24)"
---
 RoutaWatch   repo:routa-js  branch:main  agents:2 active:1  dirty:2  unknown:1  synced 2m ago
┌Files─────────────────────────────────────────────────────────────────────────────────────────┐
│ ALL FILES  2 files  commits:...                                                              │
│──────────────────────────────────────────────────────────────────────────────────────────────│
│> tui.rs                                                                                      │
│  ...uta-watch/src  M  +38 -5     4m                                                          │
│  route.ts                                                                                    │
│  .../api/a2a/card  D  -12        5m                                                          │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌Diff Preview──────────────────────────────────────────────────────────────────────────────────┐
│@@ -1,2 +1,3 @@                                                                               │
│-use old                                                                                      │
│+use new                                                                                      │
│+use cache                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌Details───────────────────────────────────────────────────────────────────────────────────────┐
│tui.rs                                                                                        │
│crates/routa-watch/src                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
↑↓ select  u unknown  d preview  Pg scroll  q quit
