crates/routa-watch/src/snapshots/routa_watch__tui__tests__routa_watch_tui_search.snap
---
source: crates/routa-watch/src/tui_tests.rs
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
 RoutaWatch   repo:routa-js  branch:main  agents:2 active:1  dirty:1  unknown:1  synced 2m ago
┌Files───────────────────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ ALL FILES  1 files  commits:...                                                    ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> route.ts                                                 .../card  D  -12        5││+use new                        │
│                                                                                    ││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    │└────────────────────────────────┘
│                                                                                    │┌Details─────────────────────────┐
│                                                                                    ││route.ts                        │
│                                                                                    ││src/app/api/a2a/card            │
│                                                                                    ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab focus  ↑↓ select  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  q quit
