crates/routa-watch/src/snapshots/routa_watch__tui__tests__routa_watch_tui_summary.snap
---
source: crates/routa-watch/src/tui_tests.rs
expression: "render_snapshot(&state, &mut cache, 120, 28)"
---
 RoutaWatch   repo:routa-js  branch:main  agents:2 active:1  dirty:2  unknown:1  synced 2m ago
┌Files───────────────────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ ALL FILES  2 files  commits:...                                                    ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> tui.rs                                                   ...h/src  M  +38 -5     4││+use new                        │
│  route.ts                                                 .../card  D  -12        5││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    │└────────────────────────────────┘
│                                                                                    │┌Details─────────────────────────┐
│                                                                                    ││tui.rs                          │
│                                                                                    ││crates/routa-watch/src          │
│                                                                                    ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab focus  ↑↓ select  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  q quit
